# medicare

./: .gitignore  README.md
AI_features/backend_agent/: pyproject.toml
AI_features/backend_agent/src/: agent.py
backend/: README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  cors.py  dependencies.py  logging.py
backend/app/routers/: __init__.py  appointment.py  chat.py  health.py  medicine.py
backend/app/schemas/: __init__.py  appointment.py  chat.py  medicine.py
backend/app/services/: __init__.py  ai_service.py  appointment_service.py  medicine_service.py
backend/app/utils/: __init__.py  disclaimers.py  response.py
frontend/: .env  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/assets/: .gitkeep
frontend/src/components/: Avatar.jsx  Navbar.jsx
frontend/src/components/ui/: Alert.jsx  Badge.jsx  Button.jsx  Card.jsx
frontend/src/contexts/: AvatarContext.jsx  ChatContext.jsx
frontend/src/pages/: AppointmentAssistancePage.jsx  LandingPage.jsx  MedicalAssistantPage.jsx  MedicineAssistancePage.jsx
frontend/src/services/api/: appointmentApi.js  chatApi.js  config.js  medicineApi.js
frontend/src/styles/: components.css  index.css
